--- a/src/asset/minimal.css
+++ b/src/asset/minimal.css
@@ -130,7 +130,7 @@ main > h1 {
   font-size: 2.5rem;
 }
 
-main > h1, main > h2, main > h3, main > h4, main > h5, main > h6 {
+main > h2, main > h3, main > h4, main > h5, main > h6 {
   margin-top: 2em;
 }
 
