--- a/src/asset/minimal.css
+++ b/src/asset/minimal.css
@@ -108,7 +108,10 @@ section {
 }
 
 .nav-top {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  height: 50px;
+  grid-column-gap: 10px;
   flex-direction: row;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -119,27 +122,19 @@ section {
 }
 
 .nav-top button, .nav-top a {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
+    line-height: 50px;
     text-align: center;
     text-decoration: none;
     color: var(--light-gray);
     margin: 0;
-    margin-right: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
     font-family: monospace;
-    font-size: 40px;
-    width: calc(var(--topbar-height) - 8);
-    height: calc(var(--topbar-height) - 8);
+    font-size: 50px;
     border: none;
     background-color: var(--background);
 }
 
 .nav-top button.emoji, .nav-top a.emoji {
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .nav-top button:hover, .nav-top a:hover {
@@ -193,7 +188,7 @@ main .attention, main .caution, main .warning {
   background-color: var(--orange);
 }
 
-main .danger, main .errror {
+main .danger, main .error {
   background-color: var(--red);
 }
 
