--- a/src/asset/a11y-light.css
+++ b/src/asset/a11y-light.css
@@ -3,61 +3,61 @@
 /* @author: ericwbailey */
 
 /* Comment */
-.hljs-comment,
-.hljs-quote {
+.light-theme .hljs-comment,
+.light-theme .hljs-quote {
   color: #696969;
 }
 
 /* Red */
-.hljs-variable,
-.hljs-template-variable,
-.hljs-tag,
-.hljs-name,
-.hljs-selector-id,
-.hljs-selector-class,
-.hljs-regexp,
-.hljs-deletion {
+.light-theme .hljs-variable,
+.light-theme .hljs-template-variable,
+.light-theme .hljs-tag,
+.light-theme .hljs-name,
+.light-theme .hljs-selector-id,
+.light-theme .hljs-selector-class,
+.light-theme .hljs-regexp,
+.light-theme .hljs-deletion {
   color: #d91e18;
 }
 
 /* Orange */
-.hljs-number,
-.hljs-built_in,
-.hljs-builtin-name,
-.hljs-literal,
-.hljs-type,
-.hljs-params,
-.hljs-meta,
-.hljs-link {
+.light-theme .hljs-number,
+.light-theme .hljs-built_in,
+.light-theme .hljs-builtin-name,
+.light-theme .hljs-literal,
+.light-theme .hljs-type,
+.light-theme .hljs-params,
+.light-theme .hljs-meta,
+.light-theme .hljs-link {
   color: #aa5d00;
 }
 
 /* Yellow */
-.hljs-attribute {
+.light-theme .hljs-attribute {
   color: #aa5d00;
 }
 
 /* Green */
-.hljs-string,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-addition {
+.light-theme .hljs-string,
+.light-theme .hljs-symbol,
+.light-theme .hljs-bullet,
+.light-theme .hljs-addition {
   color: #008000;
 }
 
 /* Blue */
-.hljs-title,
-.hljs-section {
+.light-theme .hljs-title,
+.light-theme .hljs-section {
   color: #007faa;
 }
 
 /* Purple */
-.hljs-keyword,
-.hljs-selector-tag {
+.light-theme .hljs-keyword,
+.light-theme .hljs-selector-tag {
   color: #7928a1;
 }
 
-.hljs {
+.light-theme .hljs {
   display: block;
   overflow-x: auto;
   background: #fefefe;
@@ -65,35 +65,35 @@
   padding: 0.5em;
 }
 
-.hljs-emphasis {
+.light-theme .hljs-emphasis {
   font-style: italic;
 }
 
-.hljs-strong {
+.light-theme .hljs-strong {
   font-weight: bold;
 }
 
 @media screen and (-ms-high-contrast: active) {
-  .hljs-addition,
-  .hljs-attribute,
-  .hljs-built_in,
-  .hljs-builtin-name,
-  .hljs-bullet,
-  .hljs-comment,
-  .hljs-link,
-  .hljs-literal,
-  .hljs-meta,
-  .hljs-number,
-  .hljs-params,
-  .hljs-string,
-  .hljs-symbol,
-  .hljs-type,
-  .hljs-quote {
+  .light-theme .hljs-addition,
+  .light-theme .hljs-attribute,
+  .light-theme .hljs-built_in,
+  .light-theme .hljs-builtin-name,
+  .light-theme .hljs-bullet,
+  .light-theme .hljs-comment,
+  .light-theme .hljs-link,
+  .light-theme .hljs-literal,
+  .light-theme .hljs-meta,
+  .light-theme .hljs-number,
+  .light-theme .hljs-params,
+  .light-theme .hljs-string,
+  .light-theme .hljs-symbol,
+  .light-theme .hljs-type,
+  .light-theme .hljs-quote {
         color: highlight;
     }
 
-    .hljs-keyword,
-    .hljs-selector-tag {
+    .light-theme .hljs-keyword,
+    .light-theme .hljs-selector-tag {
         font-weight: bold;
     }
 }
