--- a/src/asset/a11y-dark.css
+++ b/src/asset/a11y-dark.css
@@ -58,11 +58,11 @@
 }
 
 .dark-theme .hljs {
-  display: block;
-  overflow-x: auto;
+  /* display: block; */
+  /* overflow-x: auto; */
   background: #2b2b2b;
   color: #f8f8f2;
-  padding: 0.5em;
+  /* padding: 0.5em; */
 }
 
 .dark-theme .hljs-emphasis {
